Regress fixes.